--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-preset-es2015": "6.24.1",
+    "csv-parser": "^2.3.2",
+    "csv-writer": "^1.5.0",
     "jsonwebtoken": "8.5.1",
     "jwt-simple": "0.5.6",
     "koa": "2.7.0",
